canvia els tipus d'activitat 2 i 3 i oculta el tipus COMPAREIX i tots el paràmetres requerits per aquest #68
